<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activites.MainActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/nunito_bold"
        android:includeFontPadding="false"
        android:text="@string/app_title"
        android:textColor="@color/note_blue"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/shape"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/gray" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:background="@null"
            android:fontFamily="@font/nunito_regular"
            android:hint="@string/search_title"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/colorTextHint"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toTopOf="@id/layoutQuickActions"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch"
        tools:layout_editor_absoluteX="3dp" />


    <LinearLayout
        android:id="@+id/layoutQuickActions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/note_blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/imageAddImage"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/imageAddWebLink"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_marginStart="@dimen/_150sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="@dimen/_52sdp"
        android:layout_height="@dimen/_52sdp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="@+id/layoutQuickActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>

